--- a/servicio-tecnico.html
+++ b/servicio-tecnico.html
@@ -18,15 +18,15 @@
                 <span class="navbar-toggler-icon"></span>
               </button>
               <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <ul class="nav nav-pills nav-fill">
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="index.html"><i class="bi bi-house"></i> Inicio</a>
+                    <a class="nav-link" href="index.html"><i class="bi bi-house"></i> Inicio</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="servicio-tecnico.html"><i class="bi bi-motherboard"></i> Servicio técnico</a>
+                    <a class="nav-link active" aria-current="page" href="servicio-tecnico.html"><i class="bi bi-motherboard"></i> Servicio técnico</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="desarrollo-software.html"><i class="bi bi-braces"></i> Desarrollo de software</a>
+                    <a class="nav-link disabled" aria-disabled="true" href="desarrollo-software.html"><i class="bi bi-braces"></i> Desarrollo de software</a>
                   </li>              
                   <li class="nav-item">
                     <a class="nav-link" href="galeria.html"><i class="bi bi-images"></i> Galeria</a>
@@ -46,7 +46,7 @@
             </div>
             <h1>Servicio técnico informático</h1>
             <h4>Reparacion de notebook, pc, consolas, celulares y mas</h4>    
-            <button>Presupuestar</button>             
+            <button> <i class="bi bi-whatsapp"></i> Contactar</button>            
         </section>
         <div class="tituloSecciones">
             <h4>Todos nuestros servicios:</h4>
