--- a/contacto.html
+++ b/contacto.html
@@ -1,49 +1,138 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
-    <link rel="stylesheet" href="css/styles.css"> 
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
+      crossorigin="anonymous"
+    />
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+      crossorigin="anonymous"
+    ></script>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css"
+    />
+    <link rel="stylesheet" href="css/styles.css" />
     <title>Contacto</title>
-</head>
-<body>
+  </head>
+  <body>
     <header>
-        <nav class="navbar navbar-expand-lg bg-body-tertiary">
-            <div class="container-fluid">
-              <a class="navbar-brand"  href="#"><img class="logo" src="img/logo1.svg"></a>
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                  <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="index.html"><i class="bi bi-house"></i> Inicio</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="servicio-tecnico.html"><i class="bi bi-motherboard"></i> Servicio técnico</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="desarrollo-software.html"><i class="bi bi-braces"></i> Desarrollo de software</a>
-                  </li>              
-                  <li class="nav-item">
-                    <a class="nav-link" href="galeria.html"><i class="bi bi-images"></i> Galeria</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="contacto.html"><i class="bi bi-envelope"></i> Contacto</a>
-                  </li>
-                </ul>            
-              </div>
-            </div>
-          </nav>
+      <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#"
+            ><img class="logo" src="img/logo1.svg"
+          /></a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="nav nav-pills nav-fill">
+              <li class="nav-item">
+                <a class="nav-link" href="index.html"
+                  ><i class="bi bi-house"></i> Inicio</a
+                >
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="servicio-tecnico.html"
+                  ><i class="bi bi-motherboard"></i> Servicio técnico</a
+                >
+              </li>
+              <li class="nav-item">
+                <a
+                  class="nav-link disabled"
+                  aria-disabled="true"
+                  href="desarrollo-software.html"
+                  ><i class="bi bi-braces"></i> Desarrollo de software</a
+                >
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="galeria.html"
+                  ><i class="bi bi-images"></i> Galeria</a
+                >
+              </li>
+              <li class="nav-item">
+                <a
+                  class="nav-link active"
+                  aria-current="page"
+                  href="contacto.html"
+                  ><i class="bi bi-envelope"></i> Contacto</a
+                >
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
     </header>
-    <main>
+    <main class="contacto">
+      <section class="presentacion">
+        <div class="contenedorImagen">
+          <img src="./img/mothernoteb.jpg" />
+        </div>
+        <h1>Servicio técnico informático</h1>
+        <h4>Reparacion de notebook, pc, consolas, celulares y mas</h4>
 
+        <button><i class="bi bi-whatsapp"></i> Contactar</button>
+      </section>
+      <div class="tituloSecciones">
+        <h4>Nuestras vias de contacto</h4>
+      </div>
+      <section class="viasContacto">
+        <form>
+          <div class="formContacto">
+            <h4>Envianos tu consulta</h4>
+            <p>
+              <label for="nombre">Nombre</label>
+              <input type="text" placeholder="Ingrese su nombre" />
+            </p>
+
+            <p>
+              <label for="apellido">Apellido</label>
+              <input type="text" placeholder="Ingrese su apellido" />
+            </p>
+
+            <p>
+              <label for="telefono">Telefono</label>
+              <input type="number" placeholder="Ingrese su telefono" />
+            </p>
+
+            <p>
+              <label for="email">E-mail</label>
+              <input type="email" placeholder="Ingrese su E-mail" />
+            </p>
+            <p>
+              <label for="consulta">Consulta</label>
+              <textarea placeholder="Ingrese una breve descripción de su consulta"></textarea>
+            </p>
+            <p class="formAcciones">
+              <button type="reset">Limpiar</button>
+              <button type="submit">Enviar</button>
+            </p>
+          </div>
+        </form>
+        <section class="otrasViasContacto">
+          <h4>Otras vias de contacto</h4>
+          <p><i class="bi bi-telephone"></i> Telefono: 3482-621473</p>
+          <p><i class="bi bi-envelope"></i> E-mail: info@kibit.com.ar</p>
+          <p><i class="bi bi-facebook"></i> Facebook</p>
+          <p><i class="bi bi-instagram"></i> Instagram</p>
+          <p><i class="bi bi-geo-alt"></i> Direccion: San martin 142 - Reconquista - Santa Fe</p>
+        </section>
+      </section>
     </main>
-    <footer>
-
-    </footer>    
-</body>
+    <footer></footer>
+  </body>
 </html>
