--- a/desarrollo-software.html
+++ b/desarrollo-software.html
@@ -20,13 +20,13 @@
               <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="index.html"><i class="bi bi-house"></i> Inicio</a>
+                    <a class="nav-link" href="index.html"><i class="bi bi-house"></i> Inicio</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="servicio-tecnico.html"><i class="bi bi-motherboard"></i> Servicio técnico</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="desarrollo-software.html"><i class="bi bi-braces"></i> Desarrollo de software</a>
+                    <a class="nav-link disabled" aria-disabled="true" href="desarrollo-software.html"><i class="bi bi-braces"></i> Desarrollo de software</a>
                   </li>              
                   <li class="nav-item">
                     <a class="nav-link" href="galeria.html"><i class="bi bi-images"></i> Galeria</a>
@@ -43,7 +43,10 @@
 
     </main>
     <footer>
-
-    </footer>    
+      <div id="pieDePagina">
+         <h1>KIBIT Informática</h1>
+         <h2>San Martin 142 - Reconquista - Santa Fe</h2>
+      </div>
+</footer>   
 </body>
 </html>
