--- a/galeria.html
+++ b/galeria.html
@@ -18,18 +18,18 @@
                 <span class="navbar-toggler-icon"></span>
               </button>
               <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <ul class="nav nav-pills nav-fill">
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="index.html"><i class="bi bi-house"></i> Inicio</a>
+                    <a class="nav-link" href="index.html"><i class="bi bi-house"></i> Inicio</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="servicio-tecnico.html"><i class="bi bi-motherboard"></i> Servicio técnico</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="desarrollo-software.html"><i class="bi bi-braces"></i> Desarrollo de software</a>
+                    <a class="nav-link disabled" aria-disabled="true" href="desarrollo-software.html"><i class="bi bi-braces"></i> Desarrollo de software</a>
                   </li>              
                   <li class="nav-item">
-                    <a class="nav-link" href="galeria.html"><i class="bi bi-images"></i> Galeria</a>
+                    <a class="nav-link active" aria-current="page" href="galeria.html"><i class="bi bi-images"></i> Galeria</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="contacto.html"><i class="bi bi-envelope"></i> Contacto</a>
@@ -40,6 +40,37 @@
           </nav>
     </header>
     <main>
+      <section class="presentacion">
+        <div class="contenedorImagen">        
+            <img src="./img/mothernoteb.jpg">
+        </div>
+        <h1>Servicio técnico informático</h1>
+        <h4>Reparacion de notebook, pc, consolas, celulares y mas</h4>    
+        <button> <i class="bi bi-whatsapp"></i> Contactar</button>            
+    </section>
+    <div class="tituloSecciones">
+        <h4>Nuestros trabajos</h4>
+    </div>
+      <section class="galeriaImagenes">
+        <div class="contImgGaleria">
+            <img src="./img/impresora.jpg">
+        </div>
+        <div class="contImgGaleria">
+          <img src="./img/limpiezaequipo.jpeg">
+        </div>
+        <div class="contImgGaleria">
+          <img src="./img/repcelular.jpg">
+        </div>
+        <div class="contImgGaleria">
+          <img src="./img/soporte-domicilio.jpg">
+        </div>
+        <div class="contImgGaleria">
+          <img src="./img/softwareinst.jpg">
+        </div>
+        <div class="contImgGaleria">
+          <img src="./img/ps4.jpg">
+        </div>
+      </section>
 
     </main>
     <footer>
