--- a/contacto.html
+++ b/contacto.html
@@ -125,7 +125,7 @@
         </form>
         <section class="otrasViasContacto">
           <h4>Otras vias de contacto</h4>
-          <p><i class="bi bi-telephone"></i> Telefono: 3482-621473</p>
+          <p><i class="bi bi-whatsapp"></i> Telefono/Whatsapp: 3482-621473</p>
           <p><i class="bi bi-envelope"></i> E-mail: info@kibit.com.ar</p>
           <p><i class="bi bi-facebook"></i> Facebook</p>
           <p><i class="bi bi-instagram"></i> Instagram</p>
@@ -133,6 +133,11 @@
         </section>
       </section>
     </main>
-    <footer></footer>
+    <footer>
+      <div id="pieDePagina">
+         <h1>KIBIT Informática</h1>
+         <h2>San Martin 142 - Reconquista - Santa Fe</h2>
+      </div>
+</footer>
   </body>
 </html>
