--- a/galeria.html
+++ b/galeria.html
@@ -74,7 +74,10 @@
 
     </main>
     <footer>
-
-    </footer>
+      <div id="pieDePagina">
+         <h1>KIBIT Informática</h1>
+         <h2>San Martin 142 - Reconquista - Santa Fe</h2>
+      </div>
+</footer>
 </body>
 </html>
