--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <a class="nav-link" href="servicio-tecnico.html"><i class="bi bi-motherboard"></i> Servicio técnico</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link disabled" aria-disabled="true" href="desarrollo-software.html"><i class="bi bi-braces"></i> Desarrollo de software</a>
+                <a class="nav-link" href="desarrollo-software.html"><i class="bi bi-braces"></i> Desarrollo de software</a>
               </li>              
               <li class="nav-item">
                 <a class="nav-link" href="galeria.html"><i class="bi bi-images"></i> Galeria</a>
